Portfolio images width adjusted to 100% to avoid being squished

--- a/src/css/ProjectAssets.css
+++ b/src/css/ProjectAssets.css
@@ -337,7 +337,7 @@
 }
 
 .desktop-image {
-  width: 80%;
+  width: 100%;
   margin-bottom: 2rem;
 }
 
@@ -738,7 +738,7 @@
   }
 
   .image-wrapper {
-    width: 90%;
+    width: 85%;
   }
 	.image-wrapper-phone {
 		width: 100%;
